# rp2040-animated-led-matrix

./: Cargo.toml  LICENSE  README.md
src/: animations.rs  lis3dh.rs  main.rs
