[package]
name = "feather-rp2040-animations"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
adafruit-feather-rp2040 = "0.7.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
critical-section = "1.1.2"
smart-leds = "0.3.0"
ws2812-pio = "0.7.0"
accelerometer = "0.12.0"
lis3dh = "0.4.2"
panic-halt = "0.2.0"
alloc-cortex-m = "0.4.4"
micromath = "1.1.1"